// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Snapshots Avatar with a image 1`] = `
.c0 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: #eee;
  background-image: linear-gradient( to right, #eee 0%, #ccc 40%, #ddd 40%, #eee 100% );
  background-repeat: no-repeat;
  -webkit-animation: gdZBtx 1s linear infinite forwards;
  animation: gdZBtx 1s linear infinite forwards;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
}

<div
  className="c0 c1"
/>
`;

exports[`<Avatar /> Snapshots Avatar without a image 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
}

<img
  alt="Icon component"
  className="c0 c1"
  src="Person.svg"
/>
`;
